tests/cases/syntax/error/process/decl002.soccam
(module decl001 soccam
  (decl ([x int])
    ((:= x 1)
     (:= x 1)))
)